// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stylesheet Animations - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"@-webkit-keyframes _0afb7 {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes _0afb7 {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@-webkit-keyframes _92d6d {
    from {
        color: rgba(255,255,255,0);
        -webkit-transform: scale(1);
                transform: scale(1)
    }
    25% {
        -webkit-transform: scale(2, 3);
                transform: scale(2, 3)
    }
    50% {
        -webkit-transform: scale(5, 5);
                transform: scale(5, 5)
    }
    75% {
        -webkit-transform: scale(4, 0.5);
                transform: scale(4, 0.5)
    }
    to {
        -webkit-transform: scale(1);
                transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes _92d6d {
    from {
        color: rgba(255,255,255,0);
        -webkit-transform: scale(1);
                transform: scale(1)
    }
    25% {
        -webkit-transform: scale(2, 3);
                transform: scale(2, 3)
    }
    50% {
        -webkit-transform: scale(5, 5);
                transform: scale(5, 5)
    }
    75% {
        -webkit-transform: scale(4, 0.5);
                transform: scale(4, 0.5)
    }
    to {
        -webkit-transform: scale(1);
                transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@-webkit-keyframes _78cfa {
    from {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(359deg);
                transform: rotate(359deg)
    }
}
@keyframes _78cfa {
    from {
        -webkit-transform: rotate(0deg);
                transform: rotate(0deg)
    }
    to {
        -webkit-transform: rotate(359deg);
                transform: rotate(359deg)
    }
}
._2UPOu {
    margin-left: 300px;
    display: -webkit-flex;
    display: flex;
    -webkit-justify-content: center;
            justify-content: center;
    -webkit-align-items: center;
            align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 3s;
            animation-duration: 3s;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-name: _0afb7;
            animation-name: _0afb7
}
._1laEb > div {
    -webkit-animation-name: _0afb7;
            animation-name: _0afb7
}
@media (min-width: 700px) {
    ._2UPOu:hover {
        -webkit-animation: _92d6d 1.5s ease-out forwards;
                animation: _92d6d 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    ._2UPOu {
        -webkit-animation-timing-function: linear;
                animation-timing-function: linear;
        -webkit-animation-duration: 1.5s;
                animation-duration: 1.5s;
        -webkit-animation-iteration-count: infinite;
                animation-iteration-count: infinite;
        -webkit-animation-name: _78cfa;
                animation-name: _78cfa
    }
}
@-webkit-keyframes b0ae1 {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
@keyframes b0ae1 {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.oZaXbG9Fi {
    height: 200px;
    width: 200px
}
._2UPOu ~ .oZaXbG9Fi {
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 3s;
            animation-duration: 3s;
    -webkit-animation-direction: alternate;
            animation-direction: alternate;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-iteration-count: infinite;
            animation-iteration-count: infinite;
    -webkit-animation-name: b0ae1;
            animation-name: b0ae1
}
@-webkit-keyframes _9dba8 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
@keyframes _9dba8 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.oZaXb_3qkL {
    height: 200px;
    width: 200px
}
._2UPOu ~ .oZaXb_3qkL {
    -webkit-animation-timing-function: linear;
            animation-timing-function: linear;
    -webkit-animation-duration: 1s;
            animation-duration: 1s;
    -webkit-animation-direction: alternate;
            animation-direction: alternate;
    -webkit-animation-fill-mode: both;
            animation-fill-mode: both;
    -webkit-animation-iteration-count: infinite;
            animation-iteration-count: infinite;
    -webkit-animation-name: _9dba8;
            animation-name: _9dba8
}
"
`;

exports[`Stylesheet Animations - Custom idents - should create a deterministic stylesheet 1`] = `
"@keyframes _0afb7 {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes _92d6d {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes _78cfa {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
.animations-unthemedAnimation_2UPOu {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: _0afb7
}
.animations-globalStyleRef_1laEb > div {
    animation-name: _0afb7
}
@media (min-width: 700px) {
    .animations-unthemedAnimation_2UPOu:hover {
        animation: _92d6d 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    .animations-unthemedAnimation_2UPOu {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: _78cfa
    }
}
@keyframes _9dba8 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.animations-themedAnimation_oZaXb-fastTheme_3q {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2UPOu ~ .animations-themedAnimation_oZaXb-fastTheme_3q {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _9dba8
}
@keyframes b0ae1 {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.animations-themedAnimation_oZaXb-slowTheme_G9 {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2UPOu ~ .animations-themedAnimation_oZaXb-slowTheme_G9 {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: b0ae1
}
"
`;

exports[`Stylesheet Animations - Development mode - should create a deterministic stylesheet 1`] = `
"@keyframes _0afb7 {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes _92d6d {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes _78cfa {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
.animations-unthemedAnimation_2UPOu {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: _0afb7
}
.animations-globalStyleRef_1laEb > div {
    animation-name: _0afb7
}
@media (min-width: 700px) {
    .animations-unthemedAnimation_2UPOu:hover {
        animation: _92d6d 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    .animations-unthemedAnimation_2UPOu {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: _78cfa
    }
}
@keyframes b0ae1 {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.animations-themedAnimation_oZaXb_animations-slowTheme_G9Fi {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2UPOu ~ .animations-themedAnimation_oZaXb_animations-slowTheme_G9Fi {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: b0ae1
}
@keyframes _9dba8 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.animations-themedAnimation_oZaXb_animations-fastTheme_3qkL {
    height: 200px;
    width: 200px
}
.animations-unthemedAnimation_2UPOu ~ .animations-themedAnimation_oZaXb_animations-fastTheme_3qkL {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _9dba8
}
"
`;

exports[`Stylesheet Animations - Production mode - should create a deterministic stylesheet 1`] = `
"@keyframes _0afb7{0%{opacity:0}to{opacity:1}}@keyframes _92d6d{0%{color:hsla(0,0%,100%,0);transform:scale(1)}25%{transform:scale(2,3)}50%{transform:scale(5)}75%{transform:scale(4,.5)}to{transform:scale(1);color:#fff}}@keyframes _78cfa{0%{transform:rotate(0deg)}to{transform:rotate(359deg)}}._2UPOu{margin-left:300px;display:flex;justify-content:center;align-items:center;height:200px;width:200px;background-color:#ff0;color:hsla(0,0%,100%,0);animation-timing-function:linear;animation-duration:3s;animation-fill-mode:both}._1laEb>div,._2UPOu{animation-name:_0afb7}@media (min-width:700px){._2UPOu:hover{animation:_92d6d 1.5s ease-out forwards}}@media (max-width:699px){._2UPOu{animation-timing-function:linear;animation-duration:1.5s;animation-iteration-count:infinite;animation-name:_78cfa}}
@keyframes _9dba8{0%{background-color:#fff}to{background-color:red}}.oZaXb_3qkL{height:200px;width:200px}._2UPOu~.oZaXb_3qkL{animation-timing-function:linear;animation-duration:1s;animation-direction:alternate;animation-fill-mode:both;animation-iteration-count:infinite;animation-name:_9dba8}
@keyframes b0ae1{0%{background-color:#fff}to{background-color:#00f}}.oZaXbG9Fi{height:200px;width:200px}._2UPOu~.oZaXbG9Fi{animation-timing-function:linear;animation-duration:3s;animation-direction:alternate;animation-fill-mode:both;animation-iteration-count:infinite;animation-name:b0ae1}
"
`;

exports[`Stylesheet Animations - Theme function ident - should create a deterministic stylesheet 1`] = `
"@keyframes _0afb7 {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
}
@keyframes _92d6d {
    from {
        color: rgba(255,255,255,0);
        transform: scale(1)
    }
    25% {
        transform: scale(2, 3)
    }
    50% {
        transform: scale(5, 5)
    }
    75% {
        transform: scale(4, 0.5)
    }
    to {
        transform: scale(1);
        color: rgba(255,255,255,1)
    }
}
@keyframes _78cfa {
    from {
        transform: rotate(0deg)
    }
    to {
        transform: rotate(359deg)
    }
}
._2UPOu {
    margin-left: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: 200px;
    background-color: yellow;
    color: rgba(255,255,255,0);
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-fill-mode: both;
    animation-name: _0afb7
}
._1laEb > div {
    animation-name: _0afb7
}
@media (min-width: 700px) {
    ._2UPOu:hover {
        animation: _92d6d 1.5s ease-out forwards
    }
}
@media (max-width: 699px) {
    ._2UPOu {
        animation-timing-function: linear;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-name: _78cfa
    }
}
@keyframes _9dba8 {
    from {
        background-color: white
    }
    to {
        background-color: red
    }
}
.oZaXb_fast_3q {
    height: 200px;
    width: 200px
}
._2UPOu ~ .oZaXb_fast_3q {
    animation-timing-function: linear;
    animation-duration: 1s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: _9dba8
}
@keyframes b0ae1 {
    from {
        background-color: white
    }
    to {
        background-color: blue
    }
}
.oZaXb_slow_G9 {
    height: 200px;
    width: 200px
}
._2UPOu ~ .oZaXb_slow_G9 {
    animation-timing-function: linear;
    animation-duration: 3s;
    animation-direction: alternate;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-name: b0ae1
}
"
`;

exports[`Stylesheet Complex selectors - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
".L94lI:focus {
    color: purple
}
._1HyDP .L94lI {
    background-color: red
}
._1PPPj_2fSE .L94lI, ._1PPPj_2Tdl .L94lI {
    background-color: blue
}
._1PPPj_2fSE ._1HyDP .L94lI, ._1PPPj_2Tdl ._1HyDP .L94lI {
    background-color: black
}
html .L94lI {
    position: absolute
}
@media screen and (min-width: 300px) {
    .L94lI {
        color: green
    }
    ._1HyDP .L94lI {
        color: red
    }
    ._1PPPj_2fSE .L94lI, ._1PPPj_2Tdl .L94lI {
        color: blue
    }
    ._1PPPj_2fSE ._1HyDP .L94lI, ._1PPPj_2Tdl ._1HyDP .L94lI {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .L94lI {
        position: relative
    }
}
._2F61i_2fSE:focus {
    color: purple
}
._1HyDP ._2F61i_2fSE {
    background-color: red
}
._1PPPj_2fSE ._2F61i_2fSE {
    background-color: blue
}
._1PPPj_2fSE ._1HyDP ._2F61i_2fSE {
    background-color: black
}
html ._2F61i_2fSE {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._2F61i_2fSE {
        color: green
    }
    ._1HyDP ._2F61i_2fSE {
        color: red
    }
    ._1PPPj_2fSE ._2F61i_2fSE {
        color: blue
    }
    ._1PPPj_2fSE ._1HyDP ._2F61i_2fSE {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html ._2F61i_2fSE {
        position: relative
    }
}
._2F61i_2Tdl:focus {
    color: purple
}
._1HyDP ._2F61i_2Tdl {
    background-color: red
}
._1PPPj_2Tdl ._2F61i_2Tdl {
    background-color: blue
}
._1PPPj_2Tdl ._1HyDP ._2F61i_2Tdl {
    background-color: black
}
html ._2F61i_2Tdl {
    position: absolute
}
@media screen and (min-width: 1000px) {
    ._2F61i_2Tdl {
        color: green
    }
    ._1HyDP ._2F61i_2Tdl {
        color: red
    }
    ._1PPPj_2Tdl ._2F61i_2Tdl {
        color: blue
    }
    ._1PPPj_2Tdl ._1HyDP ._2F61i_2Tdl {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html ._2F61i_2Tdl {
        position: relative
    }
}
"
`;

exports[`Stylesheet Complex selectors - Custom idents - should create a deterministic stylesheet 1`] = `
".complexSelectors-styles_blue_L94lI:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
    background-color: red
}
.complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-styles_blue_L94lI {
    background-color: blue
}
.complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
    background-color: black
}
html .complexSelectors-styles_blue_L94lI {
    position: absolute
}
@media screen and (min-width: 300px) {
    .complexSelectors-styles_blue_L94lI {
        color: green
    }
    .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
        color: red
    }
    .complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-styles_blue_L94lI {
        color: blue
    }
    .complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .complexSelectors-styles_blue_L94lI {
        position: relative
    }
}
.complexSelectors-red_2F61i-small_2T:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-small_2T {
    background-color: red
}
.complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-red_2F61i-small_2T {
    background-color: blue
}
.complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-small_2T {
    background-color: black
}
html .complexSelectors-red_2F61i-small_2T {
    position: absolute
}
@media screen and (min-width: 1000px) {
    .complexSelectors-red_2F61i-small_2T {
        color: green
    }
    .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-small_2T {
        color: red
    }
    .complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-red_2F61i-small_2T {
        color: blue
    }
    .complexSelectors-themedStyle_1PPPj-small_2T .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-small_2T {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html .complexSelectors-red_2F61i-small_2T {
        position: relative
    }
}
.complexSelectors-red_2F61i-big_2f:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-big_2f {
    background-color: red
}
.complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-red_2F61i-big_2f {
    background-color: blue
}
.complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-big_2f {
    background-color: black
}
html .complexSelectors-red_2F61i-big_2f {
    position: absolute
}
@media screen and (min-width: 700px) {
    .complexSelectors-red_2F61i-big_2f {
        color: green
    }
    .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-big_2f {
        color: red
    }
    .complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-red_2F61i-big_2f {
        color: blue
    }
    .complexSelectors-themedStyle_1PPPj-big_2f .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i-big_2f {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html .complexSelectors-red_2F61i-big_2f {
        position: relative
    }
}
"
`;

exports[`Stylesheet Complex selectors - Development mode - should create a deterministic stylesheet 1`] = `
".complexSelectors-styles_blue_L94lI:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
    background-color: red
}
.complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-styles_blue_L94lI {
    background-color: blue
}
.complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
    background-color: black
}
html .complexSelectors-styles_blue_L94lI {
    position: absolute
}
@media screen and (min-width: 300px) {
    .complexSelectors-styles_blue_L94lI {
        color: green
    }
    .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
        color: red
    }
    .complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-styles_blue_L94lI {
        color: blue
    }
    .complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI, .complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-styles_blue_L94lI {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .complexSelectors-styles_blue_L94lI {
        position: relative
    }
}
.complexSelectors-red_2F61i_complexSelectors-big_2fSE:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
    background-color: red
}
.complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
    background-color: blue
}
.complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
    background-color: black
}
html .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
    position: absolute
}
@media screen and (min-width: 700px) {
    .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
        color: green
    }
    .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
        color: red
    }
    .complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
        color: blue
    }
    .complexSelectors-themedStyle_1PPPj_complexSelectors-big_2fSE .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html .complexSelectors-red_2F61i_complexSelectors-big_2fSE {
        position: relative
    }
}
.complexSelectors-red_2F61i_complexSelectors-small_2Tdl:focus {
    color: purple
}
.complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
    background-color: red
}
.complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
    background-color: blue
}
.complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
    background-color: black
}
html .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
    position: absolute
}
@media screen and (min-width: 1000px) {
    .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
        color: green
    }
    .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
        color: red
    }
    .complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
        color: blue
    }
    .complexSelectors-themedStyle_1PPPj_complexSelectors-small_2Tdl .complexSelectors-unthemedClassStyle_1HyDP .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html .complexSelectors-red_2F61i_complexSelectors-small_2Tdl {
        position: relative
    }
}
"
`;

exports[`Stylesheet Complex selectors - Production mode - should create a deterministic stylesheet 1`] = `
".L94lI:focus{color:purple}._1HyDP .L94lI{background-color:red}._1PPPj_2fSE .L94lI,._1PPPj_2Tdl .L94lI{background-color:#00f}._1PPPj_2fSE ._1HyDP .L94lI,._1PPPj_2Tdl ._1HyDP .L94lI{background-color:#000}html .L94lI{position:absolute}@media screen and (min-width:300px){.L94lI{color:green}._1HyDP .L94lI{color:red}._1PPPj_2fSE .L94lI,._1PPPj_2Tdl .L94lI{color:#00f}._1PPPj_2fSE ._1HyDP .L94lI,._1PPPj_2Tdl ._1HyDP .L94lI{color:#000}}@media screen and (min-width:700px){html .L94lI{position:relative}}
._2F61i_2fSE:focus{color:purple}._1HyDP ._2F61i_2fSE{background-color:red}._1PPPj_2fSE ._2F61i_2fSE{background-color:#00f}._1PPPj_2fSE ._1HyDP ._2F61i_2fSE{background-color:#000}html ._2F61i_2fSE{position:absolute}@media screen and (min-width:700px){._2F61i_2fSE{color:green}._1HyDP ._2F61i_2fSE{color:red}._1PPPj_2fSE ._2F61i_2fSE{color:#00f}._1PPPj_2fSE ._1HyDP ._2F61i_2fSE{color:#000}}@media screen and (min-width:701px){html ._2F61i_2fSE{position:relative}}
._2F61i_2Tdl:focus{color:purple}._1HyDP ._2F61i_2Tdl{background-color:red}._1PPPj_2Tdl ._2F61i_2Tdl{background-color:#00f}._1PPPj_2Tdl ._1HyDP ._2F61i_2Tdl{background-color:#000}html ._2F61i_2Tdl{position:absolute}@media screen and (min-width:1000px){._2F61i_2Tdl{color:green}._1HyDP ._2F61i_2Tdl{color:red}._1PPPj_2Tdl ._2F61i_2Tdl{color:#00f}._1PPPj_2Tdl ._1HyDP ._2F61i_2Tdl{color:#000}}@media screen and (min-width:1001px){html ._2F61i_2Tdl{position:relative}}
"
`;

exports[`Stylesheet Complex selectors - Theme function ident - should create a deterministic stylesheet 1`] = `
".L94lI:focus {
    color: purple
}
._1HyDP .L94lI {
    background-color: red
}
._1PPPj_big_theme_2f .L94lI, ._1PPPj_small_theme_2T .L94lI {
    background-color: blue
}
._1PPPj_big_theme_2f ._1HyDP .L94lI, ._1PPPj_small_theme_2T ._1HyDP .L94lI {
    background-color: black
}
html .L94lI {
    position: absolute
}
@media screen and (min-width: 300px) {
    .L94lI {
        color: green
    }
    ._1HyDP .L94lI {
        color: red
    }
    ._1PPPj_big_theme_2f .L94lI, ._1PPPj_small_theme_2T .L94lI {
        color: blue
    }
    ._1PPPj_big_theme_2f ._1HyDP .L94lI, ._1PPPj_small_theme_2T ._1HyDP .L94lI {
        color: black
    }
}
@media screen and (min-width: 700px) {
    html .L94lI {
        position: relative
    }
}
._2F61i_big_theme_2f:focus {
    color: purple
}
._1HyDP ._2F61i_big_theme_2f {
    background-color: red
}
._1PPPj_big_theme_2f ._2F61i_big_theme_2f {
    background-color: blue
}
._1PPPj_big_theme_2f ._1HyDP ._2F61i_big_theme_2f {
    background-color: black
}
html ._2F61i_big_theme_2f {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._2F61i_big_theme_2f {
        color: green
    }
    ._1HyDP ._2F61i_big_theme_2f {
        color: red
    }
    ._1PPPj_big_theme_2f ._2F61i_big_theme_2f {
        color: blue
    }
    ._1PPPj_big_theme_2f ._1HyDP ._2F61i_big_theme_2f {
        color: black
    }
}
@media screen and (min-width: 701px) {
    html ._2F61i_big_theme_2f {
        position: relative
    }
}
._2F61i_small_theme_2T:focus {
    color: purple
}
._1HyDP ._2F61i_small_theme_2T {
    background-color: red
}
._1PPPj_small_theme_2T ._2F61i_small_theme_2T {
    background-color: blue
}
._1PPPj_small_theme_2T ._1HyDP ._2F61i_small_theme_2T {
    background-color: black
}
html ._2F61i_small_theme_2T {
    position: absolute
}
@media screen and (min-width: 1000px) {
    ._2F61i_small_theme_2T {
        color: green
    }
    ._1HyDP ._2F61i_small_theme_2T {
        color: red
    }
    ._1PPPj_small_theme_2T ._2F61i_small_theme_2T {
        color: blue
    }
    ._1PPPj_small_theme_2T ._1HyDP ._2F61i_small_theme_2T {
        color: black
    }
}
@media screen and (min-width: 1001px) {
    html ._2F61i_small_theme_2T {
        position: relative
    }
}
"
`;

exports[`Stylesheet Feature queries - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._3D3Jg {
    display: block
}
@supports (display: grid) {
    ._3D3Jg {
        display: grid
    }
}
@supports not (display: grid) {
    ._3D3Jg {
        display: -webkit-flex;
        display: flex
    }
}
"
`;

exports[`Stylesheet Feature queries - Custom idents - should create a deterministic stylesheet 1`] = `
".feature-queries-feature-queries_3D3Jg {
    display: block
}
@supports (display: grid) {
    .feature-queries-feature-queries_3D3Jg {
        display: grid
    }
}
@supports not (display: grid) {
    .feature-queries-feature-queries_3D3Jg {
        display: flex
    }
}
"
`;

exports[`Stylesheet Feature queries - Development mode - should create a deterministic stylesheet 1`] = `
".feature-queries-feature-queries_3D3Jg {
    display: block
}
@supports (display: grid) {
    .feature-queries-feature-queries_3D3Jg {
        display: grid
    }
}
@supports not (display: grid) {
    .feature-queries-feature-queries_3D3Jg {
        display: flex
    }
}
"
`;

exports[`Stylesheet Feature queries - Production mode - should create a deterministic stylesheet 1`] = `
"._3D3Jg{display:block}@supports (display:grid){._3D3Jg{display:grid}}@supports not (display:grid){._3D3Jg{display:flex}}
"
`;

exports[`Stylesheet Feature queries - Theme function ident - should create a deterministic stylesheet 1`] = `
"._3D3Jg {
    display: block
}
@supports (display: grid) {
    ._3D3Jg {
        display: grid
    }
}
@supports not (display: grid) {
    ._3D3Jg {
        display: flex
    }
}
"
`;

exports[`Stylesheet Multi file - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._2pKJz {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Custom idents - should create a deterministic stylesheet 1`] = `
".multi-multiStyles_2pKJz {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Development mode - should create a deterministic stylesheet 1`] = `
".multi-multiStyles_2pKJz {
    color: blue
}
"
`;

exports[`Stylesheet Multi file - Production mode - should create a deterministic stylesheet 1`] = `
"._2pKJz{color:#00f}
"
`;

exports[`Stylesheet Multi file - Theme function ident - should create a deterministic stylesheet 1`] = `
"._2pKJz {
    color: blue
}
"
`;

exports[`Stylesheet Simple - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
._3CZgA {
    height: 100px;
    width: 100px;
    color: blue;
    display: -webkit-flex;
    display: flex
}
._3CZgA:hover {
    background-color: purple
}
._1tjZ2 {
    color: red
}
body ._1tjZ2 {
    z-index: 2
}
html ._3CZgA {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._1tjZ2 {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Custom idents - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.simple-mainStyles_blue_3CZgA {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.simple-mainStyles_blue_3CZgA:hover {
    background-color: purple
}
.simple-mainStyles_red_1tjZ2 {
    color: red
}
body .simple-mainStyles_red_1tjZ2 {
    z-index: 2
}
html .simple-mainStyles_blue_3CZgA {
    position: absolute
}
@media screen and (min-width: 700px) {
    .simple-mainStyles_red_1tjZ2 {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Development mode - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
.simple-mainStyles_blue_3CZgA {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
.simple-mainStyles_blue_3CZgA:hover {
    background-color: purple
}
.simple-mainStyles_red_1tjZ2 {
    color: red
}
body .simple-mainStyles_red_1tjZ2 {
    z-index: 2
}
html .simple-mainStyles_blue_3CZgA {
    position: absolute
}
@media screen and (min-width: 700px) {
    .simple-mainStyles_red_1tjZ2 {
        color: green
    }
}
"
`;

exports[`Stylesheet Simple - Production mode - should create a deterministic stylesheet 1`] = `
"body,html{background-color:pink}._3CZgA{height:100px;width:100px;color:#00f;display:flex}._3CZgA:hover{background-color:purple}._1tjZ2{color:red}body ._1tjZ2{z-index:2}html ._3CZgA{position:absolute}@media screen and (min-width:700px){._1tjZ2{color:green}}
"
`;

exports[`Stylesheet Simple - Theme function ident - should create a deterministic stylesheet 1`] = `
"html, body {
    background-color: pink
}
._3CZgA {
    height: 100px;
    width: 100px;
    color: blue;
    display: flex
}
._3CZgA:hover {
    background-color: purple
}
._1tjZ2 {
    color: red
}
body ._1tjZ2 {
    z-index: 2
}
html ._3CZgA {
    position: absolute
}
@media screen and (min-width: 700px) {
    ._1tjZ2 {
        color: green
    }
}
"
`;

exports[`Stylesheet Themed - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._1Y04H {
    z-index: 1;
    display: -webkit-flex;
    display: flex
}
.te25G {
    z-index: 2
}
._1M-8T {
    z-index: 3
}
.cKZBwyxdf {
    background-color: yellow
}
._2Js2ayxdf {
    height: 12px
}
.jICaHyxdf {
    line-height: 6
}
._2LpLXyxdf {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._2OV4cyxdf {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3a6pMyxdf {
    color: yellow
}
.cKZBwPgDT {
    background-color: red
}
._2Js2aPgDT {
    height: 8px
}
.jICaHPgDT {
    line-height: 4
}
._2LpLXPgDT {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._2OV4cPgDT {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3a6pMPgDT {
    color: red
}
"
`;

exports[`Stylesheet Themed - Custom idents - should create a deterministic stylesheet 1`] = `
".stylesOne-regularStyle_1Y04H {
    z-index: 1;
    display: flex
}
.stylesTwo-regularStyle_te25G {
    z-index: 2
}
.stylesThree-regularStyle_1M-8T {
    z-index: 3
}
.stylesOne-themeStyle_cKZBw-themeOne_yx {
    background-color: yellow
}
.stylesTwo-themeStyle_2Js2a-themeOne_yx {
    height: 12px
}
.stylesThree-themeStyle_jICaH-themeOne_yx {
    line-height: 6
}
.stylesThree-styleNode_2LpLX-themeOne_yx {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_2OV4c-themeOne_yx {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3a6pM-themeOne_yx {
    color: yellow
}
.stylesOne-themeStyle_cKZBw-themeTwo_Pg {
    background-color: red
}
.stylesTwo-themeStyle_2Js2a-themeTwo_Pg {
    height: 8px
}
.stylesThree-themeStyle_jICaH-themeTwo_Pg {
    line-height: 4
}
.stylesThree-styleNode_2LpLX-themeTwo_Pg {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_2OV4c-themeTwo_Pg {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3a6pM-themeTwo_Pg {
    color: red
}
"
`;

exports[`Stylesheet Themed - Development mode - should create a deterministic stylesheet 1`] = `
".stylesOne-regularStyle_1Y04H {
    z-index: 1;
    display: flex
}
.stylesTwo-regularStyle_te25G {
    z-index: 2
}
.stylesThree-regularStyle_1M-8T {
    z-index: 3
}
.stylesOne-themeStyle_cKZBw_themeOne-themeOne_yxdf {
    background-color: yellow
}
.stylesTwo-themeStyle_2Js2a_themeOne-themeOne_yxdf {
    height: 12px
}
.stylesThree-themeStyle_jICaH_themeOne-themeOne_yxdf {
    line-height: 6
}
.stylesThree-styleNode_2LpLX_themeOne-themeOne_yxdf {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_2OV4c_themeOne-themeOne_yxdf {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3a6pM_themeOne-themeOne_yxdf {
    color: yellow
}
.stylesOne-themeStyle_cKZBw_themeTwo-themeTwo_PgDT {
    background-color: red
}
.stylesTwo-themeStyle_2Js2a_themeTwo-themeTwo_PgDT {
    height: 8px
}
.stylesThree-themeStyle_jICaH_themeTwo-themeTwo_PgDT {
    line-height: 4
}
.stylesThree-styleNode_2LpLX_themeTwo-themeTwo_PgDT {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_2OV4c_themeTwo-themeTwo_PgDT {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
.stylesThree-styleNode_3a6pM_themeTwo-themeTwo_PgDT {
    color: red
}
"
`;

exports[`Stylesheet Themed - Production mode - should create a deterministic stylesheet 1`] = `
"._1Y04H{z-index:1;display:flex}
.te25G{z-index:2}
._1M-8T{z-index:3}
.cKZBwyxdf{background-color:#ff0}
._2Js2ayxdf{height:12px}
.jICaHyxdf{line-height:6}._2LpLXyxdf{border-bottom:6px solid pink}._2OV4cyxdf{border-bottom:12px solid pink}._3a6pMyxdf{color:#ff0}
.cKZBwPgDT{background-color:red}
._2Js2aPgDT{height:8px}
.jICaHPgDT{line-height:4}._2LpLXPgDT{border-bottom:4px solid pink}._2OV4cPgDT{border-bottom:8px solid pink}._3a6pMPgDT{color:red}
"
`;

exports[`Stylesheet Themed - Theme function ident - should create a deterministic stylesheet 1`] = `
"._1Y04H {
    z-index: 1;
    display: flex
}
.te25G {
    z-index: 2
}
._1M-8T {
    z-index: 3
}
.cKZBw_theme_one_yx {
    background-color: yellow
}
._2Js2a_theme_one_yx {
    height: 12px
}
.jICaH_theme_one_yx {
    line-height: 6
}
._2LpLX_theme_one_yx {
    border-bottom-width: 6px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._2OV4c_theme_one_yx {
    border-bottom-width: 12px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3a6pM_theme_one_yx {
    color: yellow
}
.cKZBw_theme_two_Pg {
    background-color: red
}
._2Js2a_theme_two_Pg {
    height: 8px
}
.jICaH_theme_two_Pg {
    line-height: 4
}
._2LpLX_theme_two_Pg {
    border-bottom-width: 4px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._2OV4c_theme_two_Pg {
    border-bottom-width: 8px;
    border-bottom-style: solid;
    border-bottom-color: pink
}
._3a6pM_theme_two_Pg {
    color: red
}
"
`;

exports[`Stylesheet Unused modules - Autoprefixer (iOS 8) - should create a deterministic stylesheet 1`] = `
"._3ur3N {
    height: 100px;
    width: 100px
}
._1TcW__3171 {
    top: 100px;
    bottom: 100px
}
"
`;

exports[`Stylesheet Unused modules - Custom idents - should create a deterministic stylesheet 1`] = `
".used-used_3ur3N {
    height: 100px;
    width: 100px
}
.usedThemeStyle-usedThemeStyle_1TcW_-theme_31 {
    top: 100px;
    bottom: 100px
}
"
`;

exports[`Stylesheet Unused modules - Development mode - should create a deterministic stylesheet 1`] = `
".unused-unused_3SBLn {
    color: red;
    background-color: blue
}
.used-used_3ur3N {
    height: 100px;
    width: 100px
}
.usedThemeStyle-usedThemeStyle_1TcW__theme-theme_3171 {
    top: 100px;
    bottom: 100px
}
"
`;

exports[`Stylesheet Unused modules - Production mode - should create a deterministic stylesheet 1`] = `
"._3ur3N{height:100px;width:100px}
._1TcW__3171{top:100px;bottom:100px}
"
`;

exports[`Stylesheet Unused modules - Theme function ident - should create a deterministic stylesheet 1`] = `
"._3ur3N {
    height: 100px;
    width: 100px
}
._1TcW__empty-theme_31 {
    top: 100px;
    bottom: 100px
}
"
`;
